--- a/index.html
+++ b/index.html
@@ -3,62 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZycloudMC - Network</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+<title>ZycloudMC - Minecraft Network</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-body{background:#0f2027;color:white}
-nav{
-display:flex;
-justify-content:space-between;
-align-items:center;
-padding:20px 60px;
-background:rgba(0,0,0,0.7);
-position:fixed;
-width:100%;
-}
-nav h1{color:#00d4ff}
-nav ul{list-style:none;display:flex;gap:30px}
-nav ul li a{
-color:white;
-text-decoration:none;
-font-weight:600;
-transition:.3s;
-}
-nav ul li a:hover{color:#00d4ff}
-header{
-height:100vh;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-text-align:center;
-background:linear-gradient(135deg,#141e30,#243b55);
-}
-header h2{
-font-size:4rem;
-color:#00d4ff;
-}
-header p{margin-top:15px;font-size:1.3rem;opacity:.8}
-.btn{
-margin-top:25px;
-padding:15px 40px;
-background:#00d4ff;
-border:none;
-border-radius:40px;
-font-weight:700;
-cursor:pointer;
-transition:.3s;
-}
-.btn:hover{
-background:#00aacc;
-transform:scale(1.05);
-}
-footer{
-background:black;
-text-align:center;
-padding:20px;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat',sans-serif}
+body{background:#0c1220;color:white;overflow-x:hidden}
+nav{position:fixed;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 80px;background:rgba(0,0,0,0.6);backdrop-filter:blur(10px);z-index:1000;}
+nav h1{color:#00e0ff;font-weight:800;font-size:1.5rem;}
+nav ul{display:flex;gap:40px;list-style:none;}
+nav ul li a{text-decoration:none;color:white;font-weight:600;transition:.3s;}
+nav ul li a:hover{color:#00e0ff;}
+.hero{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;background:radial-gradient(circle at top,#16213e,#0c1220);}
+.hero h2{font-size:5rem;font-weight:800;color:#00e0ff;}
+.hero p{margin-top:20px;font-size:1.3rem;opacity:.8;}
+.play-btn{margin-top:40px;padding:18px 50px;border:none;border-radius:50px;background:linear-gradient(45deg,#00e0ff,#0099ff);font-size:1.1rem;font-weight:700;cursor:pointer;transition:.3s;}
+.play-btn:hover{transform:scale(1.07);}
+.section{padding:120px 80px;text-align:center;}
+.section h3{font-size:2.5rem;margin-bottom:60px;color:#00e0ff;}
+.modes{display:flex;justify-content:center;gap:40px;flex-wrap:wrap;}
+.card{background:rgba(255,255,255,0.05);padding:40px;border-radius:20px;width:300px;transition:.3s;}
+.card:hover{transform:translateY(-10px);background:rgba(0,224,255,0.15);}
+.card h4{font-size:1.5rem;margin-bottom:15px;}
+.staff-preview{display:flex;justify-content:center;margin-top:40px;}
+.owner-card{background:rgba(255,255,255,0.05);padding:30px 50px;border-radius:20px;transition:.3s;}
+.owner-card:hover{background:rgba(0,224,255,0.15);transform:translateY(-5px);}
+footer{background:black;padding:30px;text-align:center;opacity:.7;}
 </style>
 </head>
 <body>
@@ -68,14 +37,43 @@ padding:20px;
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="staff.html">Staff</a></li>
+<li><a href="store.html">Store</a></li>
 </ul>
 </nav>
 
-<header>
+<div class="hero">
 <h2>ZycloudMC</h2>
-<p>Il nuovo Network Minecraft competitivo</p>
-<button class="btn" onclick="copyIP()">Copia IP</button>
-</header>
+<p>Il Network Minecraft competitivo di nuova generazione</p>
+<button class="play-btn" onclick="copyIP()">GIOCA ORA</button>
+</div>
+
+<div class="section">
+<h3>Modalità di Gioco</h3>
+<div class="modes">
+<div class="card">
+<h4>⚔ BedWars</h4>
+<p>Combatti e difendi il tuo letto contro gli avversari.</p>
+</div>
+<div class="card">
+<h4>🏝 SkyWars</h4>
+<p>Combatti nelle isole volanti e diventa il migliore.</p>
+</div>
+<div class="card">
+<h4>🏆 Practice</h4>
+<p>Allena le tue skill contro altri giocatori.</p>
+</div>
+</div>
+</div>
+
+<div class="section">
+<h3>Staff</h3>
+<div class="staff-preview">
+<div class="owner-card">
+<h4>👑 Owner</h4>
+<p>_SharpX09_</p>
+</div>
+</div>
+</div>
 
 <footer>
 © 2026 ZycloudMC - Tutti i diritti riservati
