Update staff.html to use Montserrat font

--- a/staff.html
+++ b/staff.html
@@ -4,67 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Staff - ZycloudMC</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat',sans-serif}
 body{background:#141e30;color:white}
-nav{
-display:flex;
-justify-content:space-between;
-align-items:center;
-padding:20px 60px;
-background:rgba(0,0,0,0.7);
-position:fixed;
-width:100%;
-}
+nav{display:flex;justify-content:space-between;align-items:center;padding:20px 60px;background:rgba(0,0,0,0.7);position:fixed;width:100%;}
 nav h1{color:#00d4ff}
 nav ul{list-style:none;display:flex;gap:30px}
-nav ul li a{
-color:white;
-text-decoration:none;
-font-weight:600;
-transition:.3s;
-}
-nav ul li a:hover{color:#00d4ff}
-.section{
-padding-top:150px;
-text-align:center;
-}
-.section h2{
-font-size:3rem;
-margin-bottom:50px;
-color:#00d4ff;
-}
-.staff-container{
-display:flex;
-justify-content:center;
-}
-.card{
-background:rgba(255,255,255,0.05);
-padding:40px;
-border-radius:20px;
-width:300px;
-transition:.3s;
-}
-.card:hover{
-transform:translateY(-10px);
-background:rgba(0,212,255,0.2);
-}
-.rank{
-font-size:1.5rem;
-font-weight:700;
-color:gold;
-}
-.name{
-margin-top:10px;
-font-size:1.2rem;
-}
-footer{
-margin-top:100px;
-background:black;
-text-align:center;
-padding:20px;
-}
+nav ul li a{color:white;text-decoration:none;font-weight:600}
+.section{padding-top:150px;text-align:center}
+.section h2{font-size:3rem;margin-bottom:50px;color:#00d4ff}
+.card{background:rgba(255,255,255,0.05);padding:40px;border-radius:20px;width:300px;margin:auto;transition:.3s;}
+.card:hover{transform:translateY(-10px);background:rgba(0,212,255,0.2);}
+.rank{font-size:1.5rem;color:gold;font-weight:800}
+.name{margin-top:10px;font-size:1.2rem}
+footer{margin-top:100px;background:black;text-align:center;padding:20px}
 </style>
 </head>
 <body>
@@ -74,16 +28,15 @@ padding:20px;
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="staff.html">Staff</a></li>
+<li><a href="store.html">Store</a></li>
 </ul>
 </nav>
 
 <div class="section">
 <h2>Il Nostro Staff</h2>
-<div class="staff-container">
 <div class="card">
 <div class="rank">👑 Owner</div>
 <div class="name">_SharpX09_</div>
-</div>
 </div>
 </div>
 
